# dcgan

./: LICENSE  README.md  load_model.py  main.py  model.py  pyproject.toml
checkpoints/discriminator/1757344158_state/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
checkpoints/discriminator/1757344158_state/ocdbt.process_0/: manifest.ocdbt
checkpoints/generator/1757344158_state/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
checkpoints/generator/1757344158_state/ocdbt.process_0/: manifest.ocdbt
